Extended project definition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,21 @@ HunterGate(
   SHA1 "8bbef873746f3e47595550751c052098aa8d202e"
 )
 
-project(osmpbf CXX C)
+# ------------------------------------------------------------------------------------------------ #
+# Project Definition                                                                               #
+# ------------------------------------------------------------------------------------------------ #
+
+project(osmpbf
+  VERSION
+    0.0.0
+
+  DESCRIPTION
+    "A parser for reading osm pbf files"
+
+  LANGUAGES
+    CXX
+    C
+)
 
 # ------------------------------------------------------------------------------------------------ #
 # Options                                                                                          #
